<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

<android.support.v7.widget.RecyclerView
    android:id="@+id/rv_bakes_list"
    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
   style="@style/match_parent"/>

</android.support.constraint.ConstraintLayout>